--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "@eslint/eslintrc": "^3"
+  },
+  "engines": {
+    "node": ">=18.0.0 <21.0.0",
+    "yarn": ">=1.22.0 <2.0.0"
   }
 }
